tests/ui/wf/wf-dyn-in-hrtb-bound-const-mismatch.stderr
error: the constant `B` is not of type `usize`
  --> $DIR/wf-dyn-in-hrtb-bound-const-mismatch.rs:16:30
   |
LL | fn nested<const B: bool>(_f: &dyn for<'a> Fn(&'a (), &'a dyn HasConst<'a, B>)) {}
   |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `usize`, found `bool`
   |
note: required by a const generic parameter in `HasConst`
  --> $DIR/wf-dyn-in-hrtb-bound-const-mismatch.rs:14:20
   |
LL | trait HasConst<'a, const N: usize> {}
   |                    ^^^^^^^^^^^^^^ required by this const generic parameter in `HasConst`

error: aborting due to 1 previous error

